# quarticSolver

./: CMakeLists.txt  README  quarticSolver.cpp  quarticSolver.h
